--- a/arduino/protocol/platformio.ini
+++ b/arduino/protocol/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
     5390 ; uCRC16Lib
     5418 ; RingBuffer
 build_flags = -fpermissive -I../common/include/
+lib_extra_dirs = ../common/lib
 
 [env:uno]
 platform = atmelavr
