--- a/arduino/breathing_with_comms/platformio.ini
+++ b/arduino/breathing_with_comms/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = yun
+default_envs = nodemcu-32s
 
 [env]
 lib_deps =
@@ -55,3 +55,8 @@ board = mkrwifi1010
 platform = espressif32
 framework = arduino
 board = nodemcu-32s
+
+[env:nano_33_iot]
+platform = atmelsam
+framework = arduino
+board = nano_33_iot
