update naming (p->pressure), update ansible

--- a/arduino/breathing_with_comms/platformio.ini
+++ b/arduino/breathing_with_comms/platformio.ini
@@ -16,6 +16,8 @@ lib_deps =
     commsControl
     5390 ; uCRC16Lib
     5418 ; RingBuffer
+    ;5574 ; INA2xx
+    ; 820 ; Adafruit MCP9808 
 build_flags = -fpermissive -I../common/include/ 
 lib_extra_dirs = ../common/lib
 monitor_speed = 115200
