--- a/ansible/playbooks/install_software.yml
+++ b/ansible/playbooks/install_software.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: cernpi
+- hosts: rpi 
   remote_user: pi
   vars:
         download_dir: /home/pi/Downloads
@@ -23,6 +23,29 @@
         - name: copy platformio script
           template: src=platform-io.sh dest={{ download_dir }} owner=pi group=pi mode=0755
 
+        - name: copy hev-display script
+          template: src=hev-display.sh dest={{ download_dir }} owner=pi group=pi mode=0755
+
+        - name: install hev-display
+          command: "{{ download_dir }}/hev-display.sh"
+
+        - name: update PATH
+          args:
+                  chdir: /etc/profile.d
+          shell: echo "export PATH=${PATH}:{{ ansible_env.HOME }}/.platformio/penv/bin" > env.sh
+          become: yes
+          become_user: root
+
+        - name: clone git repo - hev-sw
+          git: 
+              repo: https://github.com/hev-sw/hev-sw.git
+              dest: "{{ ansible_env.HOME }}/hev-sw"
+
+        - name: clone git repo - hev-display
+          git: 
+              repo: https://github.com/hev-sw/hev-display.git
+              dest: "{{ ansible_env.HOME }}/hev-display"
+
         - name: install platformio
           command: "{{ download_dir }}/platform-io.sh"
 
@@ -32,11 +55,19 @@
               name: "{{ item }}"
           with_items: "{{ pip_list }}"  
 
+        - name: install hev-display via apt
+          apt: 
+              name: hev-display
+              state: present
+              update_cache: yes
+          become: yes
+
         - name: link fonts for hev-display
           file:
               src: "/usr/share/fonts/truetype/dejavu"
               dest: "/usr/local/qt5pi/lib/fonts"
               state: link
+          become: yes
 
   #- name: install arduino suite
   #command: ./arduino_suite.sh
