--- a/arduino/hev_prototype_v1/platformio.ini
+++ b/arduino/hev_prototype_v1/platformio.ini
@@ -13,7 +13,7 @@ default_envs = nodemcu-32s
 
 [env]
 lib_deps =
-    commsControl
+    CommsControl
     5574 ; INA2xx
      820 ; Adafruit MCP9808 
     5390 ; uCRC16Lib
