updated vent modes, removed uno

--- a/arduino/hev_prototype_v1/platformio.ini
+++ b/arduino/hev_prototype_v1/platformio.ini
@@ -18,19 +18,14 @@ lib_deps =
      820 ; Adafruit MCP9808 
     5390 ; uCRC16Lib
     5418 ; RingBuffer
-build_flags = -fpermissive -I../common/include/ 
+build_flags = -fpermissive -I../common/include/
 lib_extra_dirs = ../common/lib
 monitor_speed = 115200
 
-[env:uno]
-platform = atmelavr
+[env:nodemcu-32s]
+platform = espressif32
 framework = arduino
-board = uno
-
-[env:mkrvidor4000]
-platform = atmelsam
-framework = arduino
-board = mkrvidor4000
+board = nodemcu-32s
 
 [env:featheresp32]
 platform = espressif32
@@ -38,27 +33,31 @@ framework = arduino
 board = featheresp32
 upload_port = /dev/ttyUSB0
 
+[env:mkrvidor4000]
+platform = atmelsam
+framework = arduino
+board = mkrvidor4000
+
 [env:due]
 platform = atmelsam
 framework = arduino
 board = due
-
-[env:yun]
-platform = atmelavr
-framework = arduino
-board = yun
 
 [env:mkrwifi1010]
 platform = atmelsam
 framework = arduino
 board = mkrwifi1010
 
-[env:nodemcu-32s]
-platform = espressif32
-framework = arduino
-board = nodemcu-32s
-
 [env:nano_33_iot]
 platform = atmelsam
 framework = arduino
 board = nano_33_iot
+
+; [env:yun]
+; platform = atmelavr
+; framework = arduino
+; board = yun
+; [env:uno]
+; platform = atmelavr
+; framework = arduino
+; board = uno
