--- a/ansible/playbooks/install_software.yml
+++ b/ansible/playbooks/install_software.yml
@@ -16,9 +16,8 @@
 
         - name: install software via apt
           apt: 
-              name: "{{ item }}"
+              name: "{{ rpi_swlist }}"  
               state: present
-          with_items: "{{ rpi_swlist }}"  
           become: yes
         
         - name: mk sw dir
@@ -58,8 +57,7 @@
         - name: pip install packages
           pip:
               executable: /usr/bin/pip3
-              name: "{{ item }}"
-          with_items: "{{ pip_list }}"  
+              name: "{{ pip_list }}"  
 
         - name: install hev-display via apt
           apt: 
