--- a/ansible/playbooks/refresh_software.yml
+++ b/ansible/playbooks/refresh_software.yml
@@ -10,19 +10,33 @@
 
         - name: install software via apt
           apt: 
-              name: "{{ item }}"
+              name: "{{ rpi_swlist }}"  
               state: present
-          with_items: "{{ rpi_swlist }}"  
           become: yes
+
+        - name: pip install packages
+          pip:
+              executable: /usr/bin/pip3
+              name: "{{ pip_list }}"  
         
+        - name: archive old hev-sw
+          archive:
+              path: "{{ ansible_env.HOME }}/hev-sw"
+              dest: "{{ ansible_env.HOME }}/hev-sw.{{ '%Y%m%d%H%M%S' | strftime }}.tgz"
+
         - name: remove old hev-sw
           file:
-              path: "{{ ansible_env.HOME }}/hev-sw"
+              path: "{{ ansible_env.HOME }}/hev-sw/"
               state: absent
+
+        - name: archive old hev-display
+          archive:
+              path: "{{ ansible_env.HOME }}/hev-display"
+              dest: "{{ ansible_env.HOME }}/hev-display.{{ '%Y%m%d%H%M%S' | strftime }}.tgz"
 
         - name: remove old hev-display
           file:
-              path: "{{ ansible_env.HOME }}/hev-display"
+              path: "{{ ansible_env.HOME }}/hev-display/"
               state: absent
 
         - name: clone git repo - hev-sw
