--- a/ansible/playbooks/install_software.yml
+++ b/ansible/playbooks/install_software.yml
@@ -3,6 +3,9 @@
   remote_user: pi
   vars:
         download_dir: /home/pi/Downloads
+        repos: 
+            - hev-sw
+            - hev-display
 
   tasks: 
         - name: include vars
@@ -13,7 +16,7 @@
               upgrade: yes
               update_cache: yes
           become: yes
-
+        
         - name: install software via apt
           apt: 
               name: "{{ rpi_swlist }}"  
@@ -24,64 +27,76 @@
           file:
               path: /home/pi/sw/bin
               state: directory
-
+        
         - name: copy platformio script
           template: src=platform-io.sh dest={{ download_dir }} owner=pi group=pi mode=0755
-
+        
         - name: copy hev-display script
           template: src=hev-display.sh dest={{ download_dir }} owner=pi group=pi mode=0755
-
+        
         - name: install hev-display
           command: "{{ download_dir }}/hev-display.sh"
-
+        
         - name: update PATH
           args:
                   chdir: /etc/profile.d
           shell: echo "export PATH=${PATH}:{{ ansible_env.HOME }}/.platformio/penv/bin" > env.sh
           become: yes
           become_user: root
-
-        - name: clone git repo - hev-sw
+        
+        - name: clone git repos
           git: 
-              repo: https://github.com/hev-sw/hev-sw.git
-              dest: "{{ ansible_env.HOME }}/hev-sw"
-
-        - name: clone git repo - hev-display
-          git: 
-              repo: https://github.com/hev-sw/hev-display.git
-              dest: "{{ ansible_env.HOME }}/hev-display"
-
+              repo: https://gitlab+deploy-token-960:xusyzScX2ZMHzRsMyEey@gitlab.cern.ch/hev-sw/{{ item }}.git
+              dest: "{{ ansible_env.HOME }}/{{ item }}"
+          loop: "{{ repos }}"
+        
+        - name: reset git users 
+          replace: 
+              path: "{{ ansible_env.HOME }}/{{ item }}/.git/config"
+              regexp: 'url = .*'
+              replace: 'url =  https://gitlab.cern.ch/hev-sw/{{ item }}.git'
+          loop: "{{ repos }}"
+        
         - name: install platformio
           command: "{{ download_dir }}/platform-io.sh"
-
+        
         - name: pip install packages
           pip:
               executable: /usr/bin/pip3
               name: "{{ pip_list }}"  
-
+        
         - name: install hev-display via apt
           apt: 
               name: hev-display
               state: present
               update_cache: yes
           become: yes
-
+        
         - name: link fonts for hev-display
           file:
               src: "/usr/share/fonts/truetype/dejavu"
               dest: "/usr/local/qt5pi/lib/fonts"
               state: link
           become: yes
+        
+       
+        - name: install hev-display systemd service
+          copy:
+              src: "{{ ansible_env.HOME }}/hev-display/extras/systemd/hev-display.service"
+              dest: "/usr/lib/systemd/system/hev-display.service"
+              remote_src: yes
+          become: yes
 
-  #- name: install arduino suite
-  #command: ./arduino_suite.sh
+        #- name: enable systemd service
+        #  systemd:
+        #    enabled: yes
+        #    daemon_reload: yes
+        #    name: hev-display
+        #  become: yes
 
-  #get_url: 
-  #url: https://www.arduino.cc/download_handler.php?f=/arduino-1.8.12-linuxarm.tar.xz
-  #dest: "{{ download_dir }}"
-
-  #- name: untar arduino suite
-  #unarchive: 
-  #src: "{{ download_dir }}/arduino-1.8.12-linuxarm.tar.xz"
-  #dest: "{{ download_dir }}"
-
+        - name: link libts
+          file:
+              src: "/usr/lib/arm-linux-gnueabihf/libts.so.0"
+              dest: "/usr/lib/arm-linux-gnueabihf/libts-0.0.so.0"
+              state: link
+          become: yes
