--- a/ansible/playbooks/lists.yml
+++ b/ansible/playbooks/lists.yml
@@ -21,7 +21,10 @@ rpi_swlist:
   - libglib2.0-dev
   - socat
   - emacs
-
+  - apache2
+  - libapache2-mod-wsgi-py3 
+  - python3-pyqt5
+  - python3-pyqtgraph
 
 pip_list: 
   - libscrc
