--- a/ansible/playbooks/refresh_software.yml
+++ b/ansible/playbooks/refresh_software.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: nuliv 
+- hosts: hevpi
   remote_user: pi
   vars:
         download_dir: /home/pi/Downloads
@@ -15,6 +15,7 @@
           apt: 
               name: "{{ rpi_swlist }}"  
               state: present
+              update_cache: yes
           become: yes
 
         - name: pip install packages
