--- a/ansible/playbooks/refresh_software.yml
+++ b/ansible/playbooks/refresh_software.yml
@@ -14,7 +14,7 @@
         - name: install software via apt
           apt: 
               name: "{{ rpi_swlist }}"  
-              state: present
+              state: latest
               update_cache: yes
           become: yes
 
@@ -56,7 +56,7 @@
         - name: install hev-display-pi4 via apt
           apt: 
               name: hev-display-pi4
-              state: present
+              state: latest
               update_cache: yes
           when: pi4 is succeeded
           become: yes
@@ -64,7 +64,7 @@
         - name: install hev-display-pi1 via apt
           apt: 
               name: hev-display-pi1
-              state: present
+              state: latest
               update_cache: yes
           when: pi4 is failed
           become: yes
