--- a/ansible/playbooks/refresh_software.yml
+++ b/ansible/playbooks/refresh_software.yml
@@ -27,8 +27,7 @@
   vars:
         download_dir: /home/pi/Downloads
         repos: 
-            - hev-sw
-            - hev-display
+            - hev
 
   tasks: 
         - name: include vars
@@ -58,18 +57,10 @@
               state: absent
           loop: "{{ repos }}"
 
-        - name: clone git repos
+        - name: clone git repo
           git: 
-              repo: https://gitlab+deploy-token-960:xusyzScX2ZMHzRsMyEey@gitlab.cern.ch/hev-sw/{{ item }}.git
-              dest: "{{ ansible_env.HOME }}/{{ item }}"
-          loop: "{{ repos }}"
-
-        - name: reset git users 
-          replace: 
-              path: "{{ ansible_env.HOME }}/{{ item }}/.git/config"
-              regexp: 'url = .*'
-              replace: 'url =  https://gitlab.cern.ch/hev-sw/{{ item }}.git'
-          loop: "{{ repos }}"
+              repo: https://ohwr.org/project/hev.git
+              dest: "{{ ansible_env.HOME }}/hev"
 
         - name: check pi version
           shell: "pinout | grep 'BCM2711'"
