--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,6 @@
-include:
-  - project: etalian/theca
-    file: /gitlab-ci-include.yml
-
 stages:
   - build
-  - trigger
+  - release
 
 build:raspi4-qmake:
   stage: build
@@ -18,7 +14,7 @@ build:raspi4-qmake:
       - hev-display
 
 build:raspi4-cmake:
-  stage: build
+  stage: release
   image: etalian/qt-raspi4
   before_script:
     - mkdir -p "${CI_PROJECT_DIR}/binaries"
@@ -47,7 +43,7 @@ build:raspi1-qmake:
       - hev-display
 
 build:raspi1-cmake:
-  stage: build
+  stage: release
   image: etalian/qt-raspi1
   before_script:
     - mkdir -p "${CI_PROJECT_DIR}/binaries"
@@ -63,10 +59,3 @@ build:raspi1-cmake:
     name: "${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}~git${CI_COMMIT_SHORT_SHA}"
     paths:
       - binaries/
-
-trigger:downstream:
-  stage: trigger
-  only:
-    - master
-  dependencies: []
-  extends: .theca-trigger-downstream
