--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,10 +14,10 @@ repos:
     hooks:
       - id: black
         language_version: python3.7
--   repo: https://github.com/timothycrosley/isort
-    rev: 5.0.8
-    hooks:
-      - id: isort
+# -   repo: https://github.com/timothycrosley/isort
+#     rev: 5.0.8
+#     hooks:
+#       - id: isort
 -   repo: https://github.com/pycqa/pylint
     rev: pylint-2.6.0
     hooks:
