uncommented mac incompatible

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ importlib-metadata==3.4.0
 iniconfig==1.1.1
 isort==5.7.0
 lazy-object-proxy==1.4.3
-#libscrc==1.5
+libscrc==1.5
 mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.5.0
