--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ BM_SCRATCH
 .pylintrc
 .pre-commit-config.yaml
 .env
+ansible/playbooks/hosts
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
