--- a/ansible/playbooks/lists.yml
+++ b/ansible/playbooks/lists.yml
@@ -23,13 +23,12 @@ rpi_swlist:
 
 
   - vim
+  - emacs
   - cowsay
   - openssh-server
   - minicom
-  - python3-serial
-  - python3-flask
+  - python3
   - sqlite3
-  - fonts-open-sans
   - cmake
   - libts0
   - libglvnd-dev  
@@ -43,15 +42,11 @@ rpi_swlist:
   - libjpeg-dev 
   - libglib2.0-dev
   - socat
-  - emacs
   - apache2
   - libapache2-mod-wsgi-py3 
-  - python3-pyqt5
-  - python3-pyqtgraph
   - lxappearance
-  - qml-module-qtquick-virtualkeyboard
 
 pip_list: 
+  - virtualenv
   - pyserial_asyncio
-
   
