--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,42 @@
 # THIS REQUIREMENTS IS A WIP
-appdirs==1.4.4
-astroid==2.4.2
-attrs==20.3.0
-black==20.8b1
-cfgv==3.2.0
-click==7.1.2
-distlib==0.3.1
-filelock==3.0.12
-identify==1.5.13
-importlib-metadata==3.4.0
-iniconfig==1.1.1
-isort==5.7.0
-lazy-object-proxy==1.4.3
-libscrc==1.5
-mccabe==0.6.1
-mypy-extensions==0.4.3
-nodeenv==1.5.0
-numpy==1.19.5
-packaging==20.8
-pathspec==0.8.1
-pluggy==0.13.1
-pre-commit==2.9.3
-psutil==5.8.0
-py==1.10.0
-pylint==2.6.0
-pyparsing==2.4.7
-pyqtgraph==0.11.1
-pyserial==3.5
-pyserial-asyncio==0.5
-PySide2==5.15.2
+# appdirs==1.4.4
+# astroid==2.4.2
+# attrs==20.3.0
+# black==20.8b1
+# cfgv==3.2.0
+# click==7.1.2
+# distlib==0.3.1
+# filelock==3.0.12
+# identify==1.5.13
+# importlib-metadata==3.4.0
+# iniconfig==1.1.1
+# isort==5.7.0
+# lazy-object-proxy==1.4.3
+# libscrc==1.5
+# mccabe==0.6.1
+# mypy-extensions==0.4.3
+# nodeenv==1.5.0
+# numpy==1.19.5
+# packaging==20.8
+# pathspec==0.8.1
+# pluggy==0.13.1
+# pre-commit==2.9.3
+# psutil==5.8.0
+# py==1.10.0
+# pylint==2.6.0
+# pyparsing==2.4.7
+# pyqtgraph==0.11.1
+# pyserial==3.5
+# pyserial-asyncio==0.5
+# PySide2==5.15.2
 pytest==6.2.1
-PyYAML==5.4.1
-regex==2020.11.13
-shiboken2==5.15.2
-six==1.15.0
-toml==0.10.2
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
-virtualenv==20.4.0
-wrapt==1.12.1
-zipp==3.4.0
+# PyYAML==5.4.1
+# regex==2020.11.13
+# shiboken2==5.15.2
+# six==1.15.0
+# toml==0.10.2
+# typed-ast==1.4.2
+# typing-extensions==3.7.4.3
+# virtualenv==20.4.0
+# wrapt==1.12.1
+# zipp==3.4.0
