--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,72 +1,13 @@
-include:
-  - project: etalian/theca
-    file: /gitlab-ci-include.yml
-
 stages:
   - build
-  - trigger
+  - test
 
-build:raspi4-qmake:
+build-job:
   stage: build
-  image: etalian/qt-raspi4
   script:
-    - /raspi/qt5/bin/qmake
-    - make
-  artifacts:
-    name: "${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}~git${CI_COMMIT_SHORT_SHA}"
-    paths:
-      - hev-display
+    - echo "Hello, $GITLAB_USER_LOGIN!"
 
-build:raspi4-cmake:
-  stage: build
-  image: etalian/qt-raspi4
-  before_script:
-    - mkdir -p "${CI_PROJECT_DIR}/binaries"
+test-job1:
+  stage: test
   script:
-    - mkdir /tmp/${CI_PROJECT_NAME} && cd "$_"
-    - cmake --config Release
-       -DCMAKE_TOOLCHAIN_FILE=/raspi/gcc-linaro-arm-linux-gnueabihf-raspbian-x64.cmake
-       -DCPACK_PACKAGE_SUFFIX=-pi4 -DCPACK_SYSTEM_NAME=raspbian10 -DCPACK_DEBIAN_PACKAGE_ARCHITECTURE=armhf
-       "${CI_PROJECT_DIR}/hev-display"
-    - make
-    - cpack -G DEB && cp -v *.deb "${CI_PROJECT_DIR}/binaries"
-  artifacts:
-    name: "${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}~git${CI_COMMIT_SHORT_SHA}"
-    paths:
-      - binaries/
-
-build:raspi1-qmake:
-  stage: build
-  image: etalian/qt-raspi1
-  script:
-    - /raspi/qt5/bin/qmake
-    - make
-  artifacts:
-    name: "${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}~git${CI_COMMIT_SHORT_SHA}"
-    paths:
-      - hev-display
-
-build:raspi1-cmake:
-  stage: build
-  image: etalian/qt-raspi1
-  before_script:
-    - mkdir -p "${CI_PROJECT_DIR}/binaries"
-  script:
-    - mkdir /tmp/${CI_PROJECT_NAME} && cd "$_"
-    - cmake --config Release
-       -DCMAKE_TOOLCHAIN_FILE=/raspi/gcc-linaro-arm-linux-gnueabihf-raspbian-x64.cmake
-       -DCPACK_PACKAGE_SUFFIX=-pi1 -DCPACK_SYSTEM_NAME=raspbian10 -DCPACK_DEBIAN_PACKAGE_ARCHITECTURE=armhf
-       "${CI_PROJECT_DIR}/hev-display"
-    - make
-    - cpack -G DEB && cp -v *.deb "${CI_PROJECT_DIR}/binaries"
-  artifacts:
-    name: "${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}~git${CI_COMMIT_SHORT_SHA}"
-    paths:
-      - binaries/
-
-trigger:downstream:
-  stage: trigger
-  only:
-    - master
-  dependencies: []
-  extends: .theca-trigger-downstream
+    - echo "This job tests something"
