--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,13 @@ stages:
 build-job:
   stage: build
   script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
+    - ls
+    - cat /etc/os-release
 
-test-job1:
+build-job1:
   stage: test
   script:
-    - echo "This job tests something"
+    - sudo update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1
+    - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.7 2
+    - pip3 install ansible
+
