--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,9 @@ build-job:
 build-job1:
   stage: test
   script:
-    - sudo update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1
-    - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3.7 2
+    - apt update
+    - apt upgrade
+    - update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1
+    - update-alternatives --install /usr/bin/python python /usr/bin/python3.7 2
     - pip3 install ansible
 
