--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,5 @@ install_packages:
     - apt -y install software-properties-common
     - apt -y install python3-pip
     - python3 --version
-    - pip install ansible
+    - pip3 install ansible
 
