--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,9 @@
 stages:
-  - install
   - build
   - test
 
 install_packages:
-  stage: install
+  stage: build
   script:
     - apt -y update
     - apt -y upgrade
@@ -15,14 +14,13 @@ install_packages:
     - python3 --version
     - pip3 install ansible
     - ansible --version
+    - ./setup CI
 
 ui_installation:
   stage: build
   script:
     - pwd
     - ls -a
-    - ansible --version
-    - ./setup.sh CI
 
 ui_test:
   stage: test
