--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # libscrc==1.5 # installed via git below
 git+https://github.com/hex-in/libscrc.git@v1.5
+GitPython==3.1.14
 numpy==1.19.5
 psutil==5.8.0
 pyqtgraph==0.11.1
