--- a/ansible/playbooks/firstboot.yml
+++ b/ansible/playbooks/firstboot.yml
@@ -25,7 +25,7 @@
 - hosts: hevpi
   remote_user: pi
   vars:
-        download_dir: /tmp/Downloads
+        download_dir: /home/pi/Downloads
 
   tasks: 
 
