--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,23 @@
 stages:
+  - runner-setup
   - build
   - test
 
+create_pi:
+  stage: runner-setup
+  script:
+    - groupadd pi
+    - useradd -u 1000 -g pi -m -p raspberry pi
+    - usermod -aG sudo pi
+
 install_packages:
   stage: build
+  dependencies: runner-setup
   script:
-    - useradd -u 1000 -g pi -m -p raspberry pi
-    # - adduser --disabled-password pi
-    - usermod -aG sudo pi
-    # - su pi
     - apt -y autoremove
     - apt -y update
     - apt -y upgrade
     - apt -y install python3.7 software-properties-common python3-pip git-all raspi-config
-    # - apt -y install software-properties-common
-    # - apt -y install python3-pip
-    # - apt -y install git-all
     - python3 --version
     - pip3 install ansible
     - ansible --version
@@ -25,6 +27,7 @@ install_packages:
 
 ui_installation:
   stage: build
+  dependencies: build
   script:
     - pwd
     - ls -a
