--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,17 +9,24 @@ before_script:
   - useradd -u 1000 -g pi -m -p raspberry pi
   - usermod -aG sudo pi
   - mkdir -p /home/pi/Downloads
+  - apt -y autoremove
+  - apt -y update
+  - apt -y upgrade
+  - apt -y install python3.7 software-properties-common python3-pip git-all raspi-config
+  - python3 --version
+  - pip3 install ansible
+  - ansible --version
 
-install_packages:
-  stage: install
-  script:
-    - apt -y autoremove
-    - apt -y update
-    - apt -y upgrade
-    - apt -y install python3.7 software-properties-common python3-pip git-all raspi-config
-    - python3 --version
-    - pip3 install ansible
-    - ansible --version
+# install_packages:
+#   stage: install
+#   script:
+#     - apt -y autoremove
+#     - apt -y update
+#     - apt -y upgrade
+#     - apt -y install python3.7 software-properties-common python3-pip git-all raspi-config
+#     - python3 --version
+#     - pip3 install ansible
+#     - ansible --version
 
 ui_installation:
   stage: build
@@ -27,7 +34,6 @@ ui_installation:
     - ls -a
     - pwd
     - cd /home/pi/hev
-    - source .hev_env/bin/activate
     - ./setup.sh CI
 
 ui_test:
