--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,13 @@ __pycache__
 *.csv
 raspberry-dataserver/foo
 env/
-BM_SCRATCH
 .cache
 .pylintrc
 .pre-commit-config.yaml
 .env
 ansible/playbooks/hosts
 .idea
+scratch_*
 
 # python virtual env created using ansible
 .hev_env
@@ -167,4 +167,3 @@ dmypy.json
 .prof
 
 # End of https://www.toptal.com/developers/gitignore/api/python
-
