--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,9 @@ repos:
     - id: end-of-file-fixer
     - id: check-yaml
     - id: check-added-large-files
+    - id: check-json
+    # - id: pretty-format-json
+    - id: requirements-txt-fixer
 -   repo: https://github.com/psf/black
     rev: 19.3b0
     hooks:
