--- a/NativeUI/configs/clinical_config.json
+++ b/NativeUI/configs/clinical_config.json
@@ -1,14 +1,15 @@
 {
   "settings":[
-[["APNEA", "ms", "APNEA", "SET_THRESHOLD_MIN", "APNEA"],["APNEA", "ms", "APNEA", "SET_THRESHOLD_MAX", "APNEA"]],
+[["APNEA", "ms", "APNEA", "SET_THRESHOLD_MIN", "APNEA", 5, 20, 10, 1, 0]],
 [["Check Pressure Patient", "ms", "CHECK_P_PATIENT", "SET_THRESHOLD_MIN", "CHECK_P_PATIENT"],["Check Pressure Patient", "ms", "CHECK_P_PATIENT", "SET_THRESHOLD_MAX", "CHECK_P_PATIENT"]],
-[["FIO2", "%", "HIGH_FIO2", "SET_THRESHOLD_MIN", "HIGH_FIO2", -10, 0, 5, 1, 0],["FIO2",  "%", "fiO2_percent", "SET_TARGET_", "FIO2_PERCENT", 20, 100, 21, 1, 0],["FIO2", "%", "HIGH_FIO2", "SET_THRESHOLD_MAX", "HIGH_FIO2", 0, 10, 5, 1, 0]],
-[["Pressure", " ", "HIGH_PRESSURE", "SET_THRESHOLD_", "HIGH_PRESSURE"],["Pressure", " ", "HIGH_PRESSURE", "SET_THRESHOLD_", "HIGH_PRESSURE"],["Pressure", " ", "HIGH_PRESSURE", "SET_THRESHOLD_", "HIGH_PRESSURE"]],
-[["Respiratory Rate", " ", "HIGH_RR", "SET_THRESHOLD_", "HIGH_RR"],["Respiratory Rate", " ", "HIGH_RR", "SET_THRESHOLD_", "HIGH_RR"],["Respiratory Rate", " ", "HIGH_RR", "SET_THRESHOLD_", "HIGH_RR"]],
-[["VTE", " ", "HIGH_VTE", "SET_THRESHOLD_", "HIGH_VTE"],["VTE", " ", "HIGH_VTE", "SET_THRESHOLD_", "HIGH_VTE"],["VTE", " ", "HIGH_VTE", "SET_THRESHOLD_", "HIGH_VTE"]],
-[["VTI", " ", "HIGH_VTI", "SET_THRESHOLD_", "HIGH_VTI"],["VTI", " ", "HIGH_VTI", "SET_THRESHOLD_", "HIGH_VTI"],["VTI", " ", "HIGH_VTI", "SET_THRESHOLD_", "HIGH_VTI"]],
-[["Occlusion", " ", "OCCLUSION","SET_THRESHOLD_", "OCCLUSION"],["Occlusion", " ", "OCCLUSION","SET_THRESHOLD_", "OCCLUSION"],["Occlusion", " ", "OCCLUSION","SET_THRESHOLD_", "OCCLUSION"]],
-[["PEEP", " ", "HIGH_PEEP","SET_THRESHOLD_", "HIGH_PEEP"],["PEEP", " ", "HIGH_PEEP","SET_THRESHOLD_", "HIGH_PEEP"],["PEEP", " ", "HIGH_PEEP","SET_THRESHOLD_", "HIGH_PEEP"]]
+[["FIO2", "%", "HIGH_FIO2", "SET_THRESHOLD_MIN", "HIGH_FIO2", -10, 0, -5, 0.1, 1],["Percentage O2", "", "fiO2_percent", "SET_TARGET_CURRENT", "FIO2_PERCENT", 20, 100, 21, 1, 0],["FIO2", "%", "HIGH_FIO2", "SET_THRESHOLD_MAX", "HIGH_FIO2", 0, 10, 5, 0.1, 1]],
+[["Pressure", " ", "HIGH_PRESSURE", "SET_THRESHOLD_MIN", "HIGH_PRESSURE"],["Inhale Pressure","","inspiratory_pressure","SET_TARGET_CURRENT","INSPIRATORY_PRESSURE", 10, 50, 17, 1, 0],["Pressure", " ", "HIGH_PRESSURE", "SET_THRESHOLD_MAX", "HIGH_PRESSURE"],["Pressure", " ", "HIGH_PRESSURE", "SET_THRESHOLD_MAX", "HIGH_PRESSURE"]],
+[["Respiratory Rate", " ", "HIGH_RR", "SET_THRESHOLD_MIN", "HIGH_RR", -10, 0, -5, 0.1, 1],["Respiratory Rate","/min","respiratory_rate","SET_TARGET_CURRENT","RESPIRATORY_RATE", 10, 20, 15, 0.1, 1],["Respiratory Rate", " ", "HIGH_RR", "SET_THRESHOLD_MAX", "HIGH_RR", 0, 10, 5, 0.1, 1]],
+[["VTE", " ", "HIGH_VTE", "SET_THRESHOLD_MIN", "HIGH_VTE", -10, 0, -5, 1, 0],["Inhale Volume", "", "volume", "SET_TARGET_CURRENT", "VOLUME", 200, 800, 400, 20, 0],["VTE", " ", "HIGH_VTE", "SET_THRESHOLD_MAX", "HIGH_VTE",0, 10, 5, 1, 0]],
+[["VTI", " ", "HIGH_VTI", "SET_THRESHOLD_MIN", "HIGH_VTI", -10, 0, -5, 1, 0],["VTI", " ", "HIGH_VTI", "SET_THRESHOLD_MAX", "HIGH_VTI",0, 10, 5, 1, 0]],
+[["Occlusion", " ", "OCCLUSION","SET_THRESHOLD_MIN", "OCCLUSION", 5, 20, 15, 1, 0]],
+[["PEEP", " ", "HIGH_PEEP","SET_THRESHOLD_MIN", "HIGH_PEEP", -2, 0, -2, 1, 0],["PEEP","cm h2o","peep","SET_TARGET_CURRENT","PEEP", 0, 100, 15, 0.1, 1],["PEEP", " ", "HIGH_PEEP","SET_THRESHOLD_MAX", "HIGH_PEEP",0, 2, 2, 1, 0]]
   ],
-  "HighLowLimits": ["High Pressure", "Occlusion"]
+  "SingleThresholds": ["APNEA", "Occlusion"],
+  "AbsoluteLimits": ["Percentage O2", "FIO2", "PEEP"]
 }
