--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ env/
 ansible/playbooks/hosts
 .idea
 scratch_*
-*/startup_config.json
+*/*/startup_config.json
 
 # python virtual env created using ansible
 .hev_env
